fix: Dont wrap text in tab labels

--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -424,6 +424,7 @@
 		align-items: center;
 
 		.nav-item {
+			white-space: nowrap;
 			@include get_textstyle("base", "regular");
 			.nav-link {
 				color: var(--text-muted);
